--- a/trellis/group_vars/production/vault.yml
+++ b/trellis/group_vars/production/vault.yml
@@ -1,24 +1,24 @@
 # Documentation: https://roots.io/trellis/docs/vault/
-vault_mysql_root_password: B3LkKUpcZVx4bpLXKXpiez%R
+vault_mysql_root_password: "B3LkKUpcZVx4bpLXKXpiez%R"
 
 # Documentation: https://roots.io/trellis/docs/security/
 vault_users:
   - name: "{{ admin_user }}"
-    password: example_password
-    salt: "generateme"
+    password: "Ja5%qF31Wcyc^ICb5E#W3*"
+    salt: "y7qzc6JAf2SHnURn@LNeg8"
 
 # Variables to accompany `group_vars/production/wordpress_sites.yml`
 # Note: the site name (`example.com`) must match up with the site name in the above file.
 vault_wordpress_sites:
   roots-example-project.com:
     env:
-      db_password: example_dbpassword
+      db_password: "mBN@b5T1%4mGIWYCTW0#bX"
       # Generate your keys here: https://roots.io/salts.html
-      auth_key: "xi*j4w}!`W]CQ631Muy5B&>^/kr1l`<Tv5$[4-uK1Xq^i7R7:|t.=O=dR}x(xYu_"
-      secure_auth_key: "+<#]lvyFoi8Y^<.e?KU!w,[%GZ)WSU$2,qyhx}uQOblplZ,:QB6)Rl,i^y)Uz]nz"
-      logged_in_key: "5P{H?*yFxod@yWD$0BxgE_j?;:hTO{-&$+-55VT_^H+[@^lmGvl3g$BWyQ3l/GCX"
-      nonce_key: "t:Ty$Nz,qnt^)h_KNPu^_)EZAYdL.P@|jPo]z@NA]q+%s]1nk>DduDk!:Zbhv]HE"
-      auth_salt: "#P>wj1G&mn`]uOEgujE?9=m>@+9,yLrK?BViP:h]^qYZ[&PogcJbYce(`;R@zI_%"
-      secure_auth_salt: ">jny;[kr|SsdGzsT]ywS{X6`%r/!XMf4%Jk3U9@awfhNK%We)};Zbg^HAH0-5Ywz"
-      logged_in_salt: "L!XSv5wO>T?/F&{n7I36gNzymQ><u7xCX,#|v74jt9O(T>0Xa_a#CoKt(gtNc{V}"
-      nonce_salt: "yE,GqLcM>]yG0xrJn]..KZe-,ktlLETs%fcHzBEH^`wFT!7]$#y5_IlL86Tq,y<1"
+      auth_key: "*`vwMk&vKLI2C]GYbnDi>;l_L`kT{el4{^Da1rvF6k+@UH$bo5_{HpQ=?33A:aeS"
+      secure_auth_key: "9-iSHK7k:2_hU6B4y,fab(MVwYG1)-2RqCFQx[$,I_gm2Y*[E;>eZyD#CFovB_Go"
+      logged_in_key: "Dy!{C7z6[ZDKB?^>@SQSBSQv|r2$p0V*Vf>K-_wC*Pg..@XSFg$<X46U(_ID/BL<"
+      nonce_key: "q!shnM3}BW6^+t|u4l5STJw$1Ki7kCFQ,H/rs=W5sCdcB[l8AS.S)`%WbhMWizzm"
+      auth_salt: "K#.yL<h]p1gyKLxn>7tC,T|3|WE:YX1U7Bz<|8`3HU8Hq;Em!T{jOq8Gh,V=md-Z"
+      secure_auth_salt: "PMnD5c5JlT:1(#i2.A9DDe$<qs5b:yR:T(<rwDOKA(idyuS%7AMwCBkEC*Y$M7k>"
+      logged_in_salt: "Q[d7?QtZDd-8>Sw}oXo,(%hKoKRFgx94Jg{mqmp@ug4p8:Yh&(ueT^8Lhk}7/Pzh"
+      nonce_salt: "-[$42D4Lb)T#%G{V+s3UL7uN%n6t-xm2i7#Z6G9qHxl9-fsK&w+4&;KM!K?}CUg8"
