--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -3,15 +3,13 @@
 # Define accompanying passwords/secrets in group_vars/production/vault.yml
 
 wordpress_sites:
-  roots-example-project.com:
+  friedagarciapark.com:
     site_hosts:
-      - canonical: roots-example-project.com
-        redirects:
-          - www.roots-example-project.com
+      - canonical: friedagarciapark.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
-    repo: git@github.com:roots/roots-example-project.com.git # replace with your Git repo URL
+    repo: git@github.com:roots/friends-of-frieda-garcia-park.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
-    branch: master
+    branch: dev-staging
     multisite:
       enabled: false
     ssl:
